test cases & cleanup